art:add an image to the website

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul>
-              <li><a href="#Accessible Forms">Home</a></li>
+              <li><a href="#">Home</a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
@@ -23,6 +23,11 @@
             This is a sample website that follows accessibility guidelines for
             people with disabilities. We hope you find it useful and easy to use.
         </p>
+
+        <div class="image-container">
+            <img src="https://images.unsplash.com/photo-1491414416654-c4de0c986af8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fHNvbWVvbmUlMjB1c2luZyUyMHNpZ24lMjBsYW5ndWFnZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="A person using sign language">
+            <p class="image-description">A person using sign language to communicate.</p>
+        </div>
     
         <h2>Accessible Forms</h2>
         <form>
