art:edit the media content

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p class="image-description">A person using sign language to communicate.</p>
         </div>
 
-           <!-- add media: audio and video -->
+           <!-- add media: audio and video elements -->
            <div class="media-container">
             <h3>Check out this video:</h3>
             <video
@@ -43,7 +43,6 @@
             </video>
             <div class="caption-container">
               <p class="caption">Caption: A cat playing with a toy</p>
-              <button class="caption-toggle">Toggle Captions</button>
             </div>
             <h3>Listen to this audio:</h3>
             <audio
@@ -55,7 +54,7 @@
             </audio>
             <div class="caption-container">
               <p class="caption">Audio Description: Happy Birthday to You (Piano Version)</p>
-              <button class="audio-toggle">Toggle Audio Description</button>
+              Music by <a href="https://pixabay.com/users/lesfm-22579021/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=music&amp;utm_content=13976">Lesfm</a> from <a href="https://pixabay.com/music//?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=music&amp;utm_content=13976">Pixabay</a>
             </div>
           </div>
     
